# GPU-tracking

./: .gitignore  CMakeLists.txt  Makefile  README.md  results.ods  tracking.bib
build_scripts/: ffmpeg-3.2.4.sh  opencv-3.2.0.sh
checkpoint/: checkpoint.tex
docs/: index.md
proposal/: proposal.tex  tracking.bib
results/: parallel.md  sequential.md
src/: dft.cu  main.cpp  mulspectrums.cu  precomp.hpp  tracker.cpp  trackerCUDAhelper.cu  trackerCUDAhelper.h  trackerKCF.cpp  trackerKCFparallel.cpp  trackerKCFparallel.cu  trackerKCFparallel.hpp
